--- a/ProiectII/LogIn/LogIn.csproj
+++ b/ProiectII/LogIn/LogIn.csproj
@@ -152,6 +152,9 @@
     <Compile Include="UserControl_Title.Designer.cs">
       <DependentUpon>UserControl_Title.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Add_Movie.resx">
+      <DependentUpon>Add_Movie.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BookingSeatsScreen.resx">
       <DependentUpon>BookingSeatsScreen.cs</DependentUpon>
     </EmbeddedResource>
@@ -160,6 +163,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manage_Users.resx">
+      <DependentUpon>Manage_Users.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
