--- a/ProiectII/LogIn/LogIn.csproj
+++ b/ProiectII/LogIn/LogIn.csproj
@@ -98,6 +98,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screening_Time.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Screening_Time.Designer.cs">
+      <DependentUpon>Screening_Time.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControl_DateTime.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -177,6 +183,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Screening_Time.resx">
+      <DependentUpon>Screening_Time.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControl_DateTime.resx">
       <DependentUpon>UserControl_DateTime.cs</DependentUpon>
     </EmbeddedResource>
